--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -1,22 +1,23 @@
-set(FSM_STATES_INSTALL_PREFIX "${MC_CONTROLLER_INSTALL_PREFIX}/fsm/states")
+set(FSM_STATES_INSTALL_DIR "${MC_CONTROLLER_INSTALL_PREFIX}/fsm/states")
+set(FSM_HDR_DIR "${PROJECT_SOURCE_DIR}/include/mc_control/fsm/states")
+set(FSM_HDR_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/include/mc_control/fsm/states")
 
 macro(add_fsm_state state_name state_SRC state_HDR)
   add_library(${state_name} SHARED  ${state_SRC} ${state_HDR} "${PROJECT_SOURCE_DIR}/include/mc_control/fsm/states/api.h")
+  set_target_properties(${state_name} PROPERTIES OUTPUT_NAME ${state_name})
   set_target_properties(${state_name} PROPERTIES PREFIX "")
   set_target_properties(${state_name} PROPERTIES COMPILE_FLAGS "-DMC_CONTROL_FSM_STATE_EXPORTS")
   target_link_libraries(${state_name} PUBLIC mc_control_fsm)
-  install(TARGETS ${state_name}
-    DESTINATION ${FSM_STATES_INSTALL_PREFIX})
-  install(FILES ${state_HDR}
-          DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mc_control/fsm/states)
+  install(TARGETS ${state_name} EXPORT mc_rtc_fsm_states DESTINATION ${FSM_STATES_INSTALL_DIR})
+  install(FILES ${state_HDR} DESTINATION ${FSM_HDR_INSTALL_DIR})
 endmacro()
 
 install(DIRECTORY data
-  DESTINATION ${FSM_STATES_INSTALL_PREFIX}
+  DESTINATION ${FSM_STATES_INSTALL_DIR}
   FILES_MATCHING PATTERN "*.json")
 
 macro(add_fsm_state_simple state_name)
-  add_fsm_state(${state_name} ${state_name}.cpp ${PROJECT_SOURCE_DIR}/include/mc_control/fsm/states/${state_name}.h)
+  add_fsm_state(${state_name} ${state_name}.cpp ${FSM_HDR_DIR}/${state_name}.h)
 endmacro()
 
 add_fsm_state_simple(HalfSitting)
@@ -37,6 +38,11 @@ if(${PYTHON_BINDING})
   target_include_directories("PythonState" PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/../../../../binding/python/$<CONFIGURATION>" ${PYTHON_INCLUDE_DIRS})
   target_link_libraries(PythonState PUBLIC mc_control_fsm ${PYTHON_LIBRARIES})
   add_dependencies(PythonState mc_rtc-python-bindings)
-  install(TARGETS PythonState
-    DESTINATION ${FSM_STATES_INSTALL_PREFIX})
+  install(TARGETS PythonState EXPORT mc_rtc_fsm_states DESTINATION ${FSM_STATES_INSTALL_DIR})
 endif()
+
+install(
+  EXPORT mc_rtc_fsm_states
+  NAMESPACE mc_rtc::fsm::states
+  DESTINATION "${CONFIG_INSTALL_DIR}"
+)
