[bindings] Use add_cython_bindings
ToDo: forward Python choices (2 and/or 3) to Python states/controllers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,12 +93,12 @@ macro(find_description_package desc_pkg)
       set(${DESC_PKG}_FOUND False)
       message(WARNING "${DESC_PKG}_PATH is not defined and pkg-config failed to find ${desc_pkg}, the related robots' modules will not work properly. Check your system configuration or define ${DESC_PKG} to fix this issue.")
     else()
-      message(STATUS "Found ${desc_pkg}: ${${DESC_PKG}_PATH}")
+      message(STATUS "-- ${desc_pkg}: ${${DESC_PKG}_PATH}")
       set(${DESC_PKG}_FOUND True)
     endif()
   else()
     set(${DESC_PKG}_FOUND True)
-    message(STATUS "Found ${desc_pkg}: ${${DESC_PKG}_PATH}")
+    message(STATUS "-- ${desc_pkg}: ${${DESC_PKG}_PATH}")
   endif()
 endmacro()
 
