--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -11,7 +11,15 @@ add_robot(env)
 add_robot(int_obj)
 add_robot(json)
 add_robot(jvrc-1)
-set_target_properties(jvrc-1 PROPERTIES COMPILE_FLAGS "-DJVRC_DESCRIPTION_PATH=\"${MC_ENV_DESCRIPTION_PATH}/../jvrc_description\"")
+if(NOT DEFINED JVRC_DESCRIPTION_PATH)
+  set(JVRC_DESCRIPTION_PATH "${MC_ENV_DESCRIPTION_PATH}/../jvrc_description")
+endif()
+if(NOT EXISTS "${JVRC_DESCRIPTION_PATH}")
+  message(SEND_ERROR "JVRC description was not found at: ${JVRC_DESCRIPTION_PATH}, you can set the JVRC_DESCRIPTION_PATH to solve this problem")
+endif()
+get_filename_component(JVRC_DESCRIPTION_PATH "${JVRC_DESCRIPTION_PATH}" ABSOLUTE)
+message("-- jvrc_description: ${JVRC_DESCRIPTION_PATH}")
+set_target_properties(jvrc-1 PROPERTIES COMPILE_FLAGS "-DJVRC_DESCRIPTION_PATH=\"${JVRC_DESCRIPTION_PATH}\"")
 
 if(${HRP4_DESCRIPTION_FOUND})
   add_robot(hrp4)
