--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
 
 before_script:
   - git submodule update --quiet --init --recursive
-  - ./.jrl-ci/dependencies/eigen-3.2
+  - add-apt-repository ppa:pierre-gergondet+ppa/multi-contact-unstable && apt-get update && apt-get upgrade cmake -qq
 
 clang-format:
   stage: clang-format
@@ -28,8 +28,12 @@ clang-format:
 
 build_debian:
   stage: build
+  before_script: []
   script:
-    - export APT_DEPENDENCIES="cython python-pip python-numpy python-nose libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
+    - git submodule update --quiet --init --recursive
+    - ./.jrl-ci/dependencies/eigen-3.2
+    - curl -sO https://cmake.org/files/v3.5/cmake-3.5.2-Linux-i386.sh && chmod +x cmake-3.5.2-Linux-i386.sh && ./cmake-3.5.2-Linux-i386.sh --prefix=/usr --skip-license
+    - export APT_DEPENDENCIES="cython python-pip python-numpy python-nose libtinyxml2-dev libboost-all-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
     - export GIT_DEPENDENCIES="jrl-umi3218/Eigen3ToPython jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/sch-core-python jrl-umi3218/RBDyn jrl-umi3218/Tasks jrl-umi3218/mc_rbdyn_urdf nanomsg/nanomsg"
     - export MASTER_PPA=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
