[cmake] Fix some issues with dependencies modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 if(POLICY CMP0063)
   cmake_policy(SET CMP0063 NEW)
 endif()
+if(POLICY CMP0054)
+  cmake_policy(SET CMP0054 NEW)
+endif()
 
 include(cmake/base.cmake)
 include(cmake/cython/cython.cmake)
@@ -93,12 +96,12 @@ macro(find_description_package desc_pkg)
       set(${DESC_PKG}_FOUND False)
       message(WARNING "${DESC_PKG}_PATH is not defined and pkg-config failed to find ${desc_pkg}, the related robots' modules will not work properly. Check your system configuration or define ${DESC_PKG} to fix this issue.")
     else()
-      message(STATUS "-- ${desc_pkg}: ${${DESC_PKG}_PATH}")
+      message(STATUS "${desc_pkg}: ${${DESC_PKG}_PATH}")
       set(${DESC_PKG}_FOUND True)
     endif()
   else()
     set(${DESC_PKG}_FOUND True)
-    message(STATUS "-- ${desc_pkg}: ${${DESC_PKG}_PATH}")
+    message(STATUS "${desc_pkg}: ${${DESC_PKG}_PATH}")
   endif()
 endmacro()
 
