[cmake] Fix include paths for Cython-generated files

--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -35,7 +35,7 @@ if(${PYTHON_BINDING})
   findpython()
   add_library(PythonState SHARED "PythonState.cpp")
   set_target_properties(PythonState PROPERTIES PREFIX "")
-  target_include_directories("PythonState" PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/../../../../binding/python/$<CONFIGURATION>" ${PYTHON_INCLUDE_DIRS})
+  target_include_directories("PythonState" PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/../../../../binding/python/mc_rtc/python/$<CONFIGURATION>" ${PYTHON_INCLUDE_DIRS})
   target_link_libraries(PythonState PUBLIC mc_control_fsm ${PYTHON_LIBRARIES})
   add_dependencies(PythonState mc_rtc-python-bindings)
   install(TARGETS PythonState EXPORT mc_rtc_fsm_states DESTINATION ${FSM_STATES_INSTALL_DIR})
