--- a/CMakeModules/CMakeLists.txt
+++ b/CMakeModules/CMakeLists.txt
@@ -14,5 +14,6 @@ endif()
 install(FILES ${MODULE_FILES} DESTINATION "${CONFIG_INSTALL_DIR}")
 foreach(F ${MODULE_FILES})
   set(PACKAGE_EXTRA_MACROS "${PACKAGE_EXTRA_MACROS}
-include(\${CMAKE_CURRENT_LIST_DIR}/${F}")
+include(\"\${CMAKE_CURRENT_LIST_DIR}/${F}\")")
 endforeach()
+set(PACKAGE_EXTRA_MACROS ${PACKAGE_EXTRA_MACROS} PARENT_SCOPE)
