[tests] Run Python controller tests with all built version

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -69,8 +69,11 @@ controller_test_run(TestEndEffectorTaskController 4001)
 # Test Python bindings
 if(${PYTHON_BINDING})
   set(USE_SANDBOX "false")
-  set(TEST_CONTROLLER_NAME "PythonController#test_python.TestPythonController")
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPythonController/mc_rtc-TestPythonController.conf)
-  add_test(NAME "TestPythonController" COMMAND test_controller_ticker --run_test=RUN ${CMAKE_CURRENT_BINARY_DIR}/TestPythonController/mc_rtc-TestPythonController.conf 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
-  add_test(TestPythonControllerLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
+  get_python_names(python_names)
+  foreach(PYTHON ${python_names})
+    set(TEST_CONTROLLER_NAME "${PYTHON}#test_python.TestPythonController")
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf")
+    add_test(NAME "Test${PYTHON}" COMMAND test_controller_ticker --run_test=RUN "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf" 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
+    add_test(Test${PYTHON}Log "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
+  endforeach()
 endif()
