[mc_control] Move ROS services to mc_control
Fix linking issues since the previous approach creates a cyclic
dependency between mc_rtc_ros and mc_control

Note: reminder for a global controller plugin system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -260,6 +260,8 @@ mc_control/mc_global_controller.cpp
 mc_control/mc_global_controller_configuration.cpp
 mc_control/mc_global_controller_gui.cpp
 mc_control/mc_global_controller_services.cpp
+mc_control/mc_global_controller_ros_services.h
+mc_control/mc_global_controller_ros_services.cpp
 )
 
 set(mc_control_HDR
