--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,7 @@ build_gcc_ros_debug:
 build_clang_ros:
   stage: build
   script:
+    - sed -i -e's/EIGEN_MAKE_ALIGNED_OPERATOR_NEW_IF(IsAligned)/EIGEN_MAKE_ALIGNED_OPERATOR_NEW_IF(bool(IsAligned))/' /usr/include/eigen3/Eigen/src/Geometry/Quaternion.h
     - ./.jrl-ci/run before_install
     - ./.jrl-ci/dependencies/catkin
     - export MASTER_PPA=""
