[cmake] Use a better macro to find description packages

--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -15,13 +15,6 @@ endmacro()
 add_robot(env)
 add_robot(int_obj)
 add_robot(json)
+find_description_package(jvrc_description)
 add_robot(jvrc-1)
-if(NOT DEFINED JVRC_DESCRIPTION_PATH)
-  set(JVRC_DESCRIPTION_PATH "${MC_ENV_DESCRIPTION_PATH}/../jvrc_description")
-endif()
-if(NOT EXISTS "${JVRC_DESCRIPTION_PATH}")
-  message(SEND_ERROR "JVRC description was not found at: ${JVRC_DESCRIPTION_PATH}, you can set the JVRC_DESCRIPTION_PATH to solve this problem")
-endif()
-get_filename_component(JVRC_DESCRIPTION_PATH "${JVRC_DESCRIPTION_PATH}" ABSOLUTE)
-message("-- jvrc_description: ${JVRC_DESCRIPTION_PATH}")
 set_target_properties(jvrc-1 PROPERTIES COMPILE_FLAGS "-DJVRC_DESCRIPTION_PATH=\"${JVRC_DESCRIPTION_PATH}\"")
