--- a/tests/robots/CMakeLists.txt
+++ b/tests/robots/CMakeLists.txt
@@ -18,6 +18,7 @@ endmacro()
 
 macro(robot_test_construction_failure NAME)
   robot_test_common(${NAME})
+  set_target_properties(${NAME} PROPERTIES FOLDER tests/robots/failure)
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE ${NAME}/mc_rtc-${NAME}.conf)
 endmacro()
 
