--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -4,16 +4,20 @@
 
 find_package(Boost REQUIRED COMPONENTS program_options timer)
 
-add_executable(mc_bin_to_log mc_bin_to_log.cpp mc_bin_to_log_main.cpp)
-target_link_libraries(mc_bin_to_log PUBLIC mc_control)
+macro(add_mc_rtc_utils NAME)
+  add_executable(${NAME} ${ARGN})
+  set_target_properties(${NAME} PROPERTIES FOLDER utils)
+  target_link_libraries(${NAME} PUBLIC mc_control)
+  install(TARGETS ${NAME} DESTINATION bin)
+endmacro()
 
-add_executable(mc_bin_to_flat mc_bin_to_flat.cpp mc_bin_to_flat_main.cpp)
+add_mc_rtc_utils(mc_bin_to_log mc_bin_to_log.cpp mc_bin_to_log_main.cpp)
+
+add_mc_rtc_utils(mc_bin_to_flat mc_bin_to_flat.cpp mc_bin_to_flat_main.cpp)
 target_link_libraries(mc_bin_to_flat PUBLIC mc_control)
 
 if(${ROSCPP_FOUND})
-  add_executable(mc_bin_to_rosbag mc_bin_to_rosbag.cpp mc_bin_to_rosbag_main.cpp)
-  target_link_libraries(mc_bin_to_rosbag PUBLIC mc_control)
-  install(TARGETS mc_bin_to_rosbag DESTINATION bin)
+  add_mc_rtc_utils(mc_bin_to_rosbag mc_bin_to_rosbag.cpp mc_bin_to_rosbag_main.cpp)
 endif()
 
 set(mc_bin_utils_SRC
@@ -24,10 +28,8 @@ set(mc_bin_utils_SRC
 if(${ROSCPP_FOUND})
   list(APPEND mc_bin_utils_SRC mc_bin_to_rosbag.cpp)
 endif()
-add_executable(mc_bin_utils ${mc_bin_utils_SRC})
+add_mc_rtc_utils(mc_bin_utils ${mc_bin_utils_SRC})
 target_link_libraries(mc_bin_utils PUBLIC mc_control Boost::program_options Boost::disable_autolinking)
-
-install(TARGETS mc_bin_to_log mc_bin_to_flat mc_bin_utils DESTINATION bin)
 
 set(UTILS_SCRIPT
   mc_rtc_new_controller
