--- a/tests/fsm_states/CMakeLists.txt
+++ b/tests/fsm_states/CMakeLists.txt
@@ -8,6 +8,7 @@ macro(add_fsm_test_state state_name)
     set(state_SRC ${state_SRC} ${state_name}.h)
   endif()
   add_library(${state_name} SHARED ${state_SRC})
+  set_target_properties(${state_name} PROPERTIES FOLDER tests/fsm/states)
   set_target_properties(${state_name} PROPERTIES
     COMPILE_FLAGS "-DMC_CONTROL_FSM_STATE_EXPORTS"
     PREFIX ""
