--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -12,9 +12,19 @@ macro(controller_test_common NAME)
   set_target_properties(${NAME} PROPERTIES
     COMPILE_FLAGS "-DMC_CONTROL_EXPORTS"
     PREFIX ""
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${NAME}
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${NAME}
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${NAME}
     )
   set(TEST_CONTROLLER_NAME ${NAME})
+  set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
+  set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
+  set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TEST_CONTROLLER_NAME}")
+  if(NOT DEFINED CMAKE_BUILD_TYPE)
+    set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
+    set(ROBOT_MODULE_PATH "${ROBOT_MODULE_PATH}/$<CONFIGURATION>")
+    set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
+  endif()
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
   # Adding a project configuration file (for MSVC only)
   generate_msvc_dot_user_file(${NAME})
@@ -22,14 +32,30 @@ endmacro()
 
 macro(controller_test_construction_failure NAME)
   controller_test_common(${NAME})
+  if(DEFINED CMAKE_BUILD_TYPE)
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
+  else()
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/$<CONFIGURATION>/mc_rtc-${NAME}.conf")
+    file(GENERATE
+       OUTPUT ${CONFIG_OUT}
+       INPUT ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
+  endif()
   set_target_properties(${NAME} PROPERTIES FOLDER tests/controllers/failure)
-  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE ${NAME}/mc_rtc-${NAME}.conf)
+  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE -- ${CONFIG_OUT})
 endmacro()
 
 macro(controller_test_run NAME NRITER)
   controller_test_common(${NAME})
+  if(DEFINED CMAKE_BUILD_TYPE)
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf")
+  else()
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}/$<CONFIGURATION>/mc_rtc-${NAME}.conf")
+    file(GENERATE
+       OUTPUT ${CONFIG_OUT}
+       INPUT ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
+  endif()
   set_target_properties(${NAME} PROPERTIES FOLDER tests/controllers/run)
-  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN ${NAME}/mc_rtc-${NAME}.conf ${NRITER})
+  add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${NRITER})
 endmacro()
 
 controller_test_construction_failure(NotAController)
@@ -79,8 +105,25 @@ if(${PYTHON_BINDING})
   get_python_names(python_names)
   foreach(PYTHON ${python_names})
     set(TEST_CONTROLLER_NAME "${PYTHON}#test_python.TestPythonController")
-    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf")
-    add_test(NAME "Test${PYTHON}" COMMAND test_controller_ticker --run_test=RUN "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf" 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
-    add_test(Test${PYTHON}Log "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
+    set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
+    set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
+    set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/${TEST_CONTROLLER_NAME}")
+    if(NOT DEFINED CMAKE_BUILD_TYPE)
+      set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
+      set(ROBOT_MODULE_PATH "${ROBOT_MODULE_PATH}/$<CONFIGURATION>")
+      set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
+    endif()
+    set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/mc_rtc-Test${PYTHON}.conf")
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" "${CONFIG_OUT}")
+    if(NOT DEFINED CMAKE_BUILD_TYPE)
+      set(CONFIG_IN "${CONFIG_OUT}")
+      set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/Test${PYTHON}/$<CONFIGURATION>/mc_rtc-Test${PYTHON}.conf")
+      file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
+    endif()
+    string(TOLOWER "${PYTHON}" PYTHON_LOWER)
+    add_test(NAME "Test${PYTHON}Controller" COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python" WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/binding/python/mc_rtc/${PYTHON_LOWER}/$<CONFIGURATION>")
+    if(UNIX)
+      add_test(Test${PYTHON}Log "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" 400 "${UTILS_BIN_DIR}")
+    endif()
   endforeach()
 endif()
